Added new commands to man page.

--- a/doc/nimdow.1
+++ b/doc/nimdow.1
@@ -127,4 +127,11 @@ Toggles the floating state of the selected window.
 .TP
 .BR --jump-to-urgent-window
 Finds and selects the first urgent window.
-
+.
+.TP
+.BR --increase-master-width
+Increases the width of the master window.
+.
+.TP
+.BR --decrease-master-width
+Decreases the width of the master window.
