--- a/doc/nimdow.1
+++ b/doc/nimdow.1
@@ -135,3 +135,11 @@ Increases the width of the master window.
 .TP
 .BR --decrease-master-width
 Decreases the width of the master window.
+.
+.TP
+.BR --move-window-to-scratchpad
+Moves the selected window to the scratchpad.
+.
+.TP
+.BR --pop-scratchpad
+Brings back the window most recently added to the scratchpad.
