Added previous/next tag commands.

--- a/doc/nimdow.1
+++ b/doc/nimdow.1
@@ -77,6 +77,14 @@ Focuses the next monitor (wraps around to the first monitor).
 Views the selected tag.
 .
 .TP
+.BR --go-to-left-tag
+Goes to the tag on the left.
+.
+.TP
+.BR --go-to-right-tag
+Goes to the tag on the right.
+.
+.TP
 .BR --go-to-previous-tag
 Views the previously viewed tag.
 .
@@ -111,6 +119,14 @@ Moves the window to the next position in the window stack.
 .TP
 \fB--move-window-to-tag\fR \fITAG\fR
 Moves the selected window to the tag associated with the given number.
+.
+.TP
+.BR --move-window-to-left-tag
+Moves the window to the tag on the left.
+.
+.TP
+.BR --move-window-to-right-tag
+Moves the window to the tag on the right.
 .
 .TP
 .BR --toggle-fullscreen
