Add support for rotating the clients

--- a/doc/nimdow.1
+++ b/doc/nimdow.1
@@ -153,6 +153,10 @@ Increases the width of the master window.
 Decreases the width of the master window.
 .
 .TP
+.BR --rotate-clients
+Rotate clients clockwise, making the last window master
+.
+.TP
 .BR --move-window-to-scratchpad
 Moves the selected window to the scratchpad.
 .
