Updated version and man page.

--- a/doc/nimdow.1
+++ b/doc/nimdow.1
@@ -163,3 +163,7 @@ Moves the selected window to the scratchpad.
 .TP
 .BR --pop-scratchpad
 Brings back the window most recently added to the scratchpad.
+.
+.TP
+.BR --toggle-statusbar
+Hides or shows the status bar on the selected monitor.
